commit b38aded85ba4d6859b9605be2be1ff18755aee6e
Date:   Thu Apr 7 06:28:05 2016 +0300

    Restructured file for the behaving namespace

commit 20ea6723e4186b93ca9ecbb7ee3aff31ffd071cf
Date:   Wed Apr 6 21:19:22 2016 +0300

    Prepare for renaming of package to behaving.trytond

commit b6864cdc3b27c13212ddf9c68ba9105b0fc10c13
Date:   Wed Apr 6 21:09:53 2016 +0300

    Renamed wiki pages

commit e0919bfa47e52914d4c791302c8bb47e4b6cf5fb
Date:   Sun Apr 3 06:57:46 2016 +0300

    Improved to doc formatting

commit d3e3d33f6fb55ca2338708160fd9b73f565ef0a7
Date:   Sun Apr 3 06:36:40 2016 +0300

    Renamed wiki/Features- to wiki/Features_

commit 515937fdb6a99c75a4d7802481adce537c9ef093
Date:   Thu Mar 24 21:03:41 2016 +0200

    Fixing account_asset - wip

commit 58271f76fe982085df93d8d6f047d7d65439cda8
Date:   Wed Mar 23 19:37:42 2016 +0200

    Added features/steps/trytond_account_payment_clearing

commit c4e3e8e433bf65b807416fd610bd0fedad16bceb
Date:   Tue Mar 22 21:22:14 2016 +0200

    Added scenario_account_asset - wip

commit 80c5fbee800eb8d5cbc7a3dcb636c6f9547603c9
Date:   Fri Mar 18 04:58:17 2016 +0200

    Added features/steps/trytond_move_template

commit 8fabb20d70d5da3cd51176982dcf1640497c976d
Date:   Wed Mar 16 19:59:13 2016 +0200

    account_statement improvements

commit 99d90f4ba09c5b0c916e5eae2be903119618df15
Date:   Sat Mar 12 00:14:55 2016 +0200

    Added scenario_account_statement

commit 6dd64603e3824595d80b8dc6d9b9591f4a4bc041
Date:   Thu Mar 10 01:31:30 2016 +0200

    Updated tags for 3.6

commit f3b0b472e8e27c0aef8161c5ddbe77a9fc6fe94d
Date:   Wed Mar 9 16:31:36 2016 +0200

    Added @works36 and @broken36 tags to the features

commit 1b0a1a3956da8a582a2ddd0480b8a084fe096489
Date:   Tue Mar 8 21:14:52 2016 +0200

    Added features/trytond/move_template/

commit 84f5171a96b61b780b7947153a4fa251d8b1760f
Date:   Tue Mar 8 17:08:18 2016 +0200

    Added scenario_move_template

commit d72b7d41df1cccb7606eee66b4a3dc4b94a21c99